<resources>
    <string name="app_name">Book Hunt</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="facebook_app_id">[com.example.andreea.bookhunt]</string>
    <string name="fb_login_protocol_scheme">fb[com.example.andreea.bookhunt]</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="remember">Remember my username and password.</string>

    <string name="error_email_input">Please fill the input with a valid email address.</string>
    <string name="error_name_input">Please fill the input with a valid name.</string>
    <string name="error_password_input">The password should be longer than 7 characters.</string>
    <string name="error_conf_password_input">The 2 passwords do not match.</string>
    <string name="error_username_input">The username should be longer than 7 characters.</string>
    <string name="error_password_eq_username_input">The username and password should not be the same.</string>
    <string name="error_username_exists">This username already exists.</string>
    <string name="error_email_exists">This email already exists.</string>
    <string name="error_username_empty">Username mandatory.</string>
    <string name="error_password_empty">Password mandatory.</string>
    <string name="error_username_non_existent">This username does not exist.</string>
    <string name="error_password_incorrect">Password incorrect.</string>

    <string name="log_out">Log out</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="search">Search</string>
    <string name="retake_photo">Retake photo</string>
    <string name="book_photo">Book photo</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author</string>
    <string name="book_search">Book search</string>
    <string name="gallery_photo">Gallery Photo</string>
    <string name="no_books">There are no books in your search history. Start your Book Hunt adventure by searching some books.</string>
    <string name="goodreads">GoodReads</string>
    <string name="result_option">We managed to get results from the following sites. Which one would you like to see?</string>
    <string name="new_york_times">New York Times</string>
    <string name="i_dream_books">I Dream Books</string>
    <string name="title_activity_administrator">AdministratorActivity</string>
</resources>
