<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextInputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextInput">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/username"
                android:inputType="text"
                android:textColorHighlight="#000"
                android:fontFamily="@font/alegreya"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextInputPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextInput">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHighlight="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_16"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnSignInGoogle"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2">

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="@dimen/width_0"
            android:layout_height="@dimen/button_height_55"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8"
            android:layout_weight="1"
            android:onClick="btnLogInOnClick"
            android:background="@drawable/rounded_button"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="@dimen/width_0"
            android:layout_height="@dimen/button_height_55"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_in"
            android:onClick="btnSignInOnClick"/>
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnSignInGoogle"
        android:layout_width="@dimen/width_0"
        android:layout_height="@dimen/button_height_55"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_bottom_google_btn_56"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        android:fontFamily="@font/alegreya"
        />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_guideline_17" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_guideline_17" />

    <CheckBox
        android:id="@+id/checkBoxRemember"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/remember"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>



</android.support.constraint.ConstraintLayout>